<resources>
    <string name="app_name">Book Keeper</string>
    <string name="explore">Explore</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="recently_visited">Recently visited</string>
    <string name="search_hint">Search for any book you like 📖</string>
    <string name="borrowed_books_fragment_title">Borrowed Books</string>
    <string name="discover_content_header">Check out the latest most trending books.</string>
    <string name="default_error_message">Something went wrong. Please try again or contact our support. </string>
    <string name="connection_error_message">Your internet connection seems to be down. Please ensure your device is connected and try again.</string>
    <string name="default_loading_message">We are fetching your data out of million books. Be calm, it\'s ready soon 😊.</string>
    <string name="no_books_borrowed_message">You haven\'t borrowed books so far.\nHead over to explore to find more books to you like.</string>
    <string name="subject_romance">Romance</string>
    <string name="subject_thriller">Thriller</string>
    <string name="subject_kids">Kids</string>
    <string name="subject_fantasy">Fantasy</string>
    <string name="subject_programming">Programming</string>
    <string name="subject_history">History</string>
    <string name="subject_psychology">Psychology</string>
    <string name="retry">Retry</string>
    <string name="borrow">Borrow</string>
    <string name="subject_finance">Finance</string>
    <string name="subject_other">Other</string>
    <string name="dialog_borrow_title">Reserve book?</string>
    <string name="dialog_borrow_message">Do you really want to reserve this book?</string>
    <string name="dialog_return_title">Cancel reservation?</string>
    <string name="dialog_return_message">Do you really want to cancel your reservation on this book?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="home_header">The books you currently borrowed</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="e_mail">E-Mail</string>
    <string name="already_nhave_an_naccount">Already \nhave an\nAccount?</string>
    <string name="here_s_nyour_first_nstep">Here\'s\nyour first\nstep!</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="invalid_login_data">Your input is invalid.</string>
    <string name="settings">Settings</string>
    <string name="suggested_genres">Suggested Genres</string>
    <string name="account">Account</string>
    <string name="logged_in_info">You are logged in with your account.</string>
    <string name="not_logged_in_info">You are not logged in at the moment. To benefit from features like syncing your data across devices, please login with your account.</string>
    <string name="suggestion_description">Select which genres you want to get suggestion in Explore.</string>
    <string name="openlibrary_hint">All data is provided by OpenLibrary.org - Go and check them out!</string>
    <string name="logout">Logout</string>
</resources>