<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settings_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultSpacing"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/account_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultSpacing"
            android:text="@string/account"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_headline" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_account_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/defaultSpacing"
            android:text="@string/not_logged_in_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_headline" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/account_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultSpacing"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_account_info" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settings_suggest_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultSpacing"
            android:text="@string/suggested_genres"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_action" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_suggest_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/defaultSpacing"
            android:text="@string/suggestion_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_suggest_genres" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/genre_chip_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/defaultSpacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_suggest_genres" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultSpacing"
            android:autoLink="web"
            android:text="@string/openlibrary_hint"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre_chip_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>